gccida/c1/gen_call_value_pop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_call_value_pop/src/insn-emit.c:14776:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)) ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_call_value_pop/src/insn-emit.c:14778:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_call_value_pop/src/obj/insn-emit.o] Error 1
